# midna

./: .bandit  .dockerignore  .flake8  .gitignore  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  __main__.py  c  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_requirements.txt  tox.ini  zap.py
.github/workflows/: release.yml  security.yml  test.yml
midna/: __init__.py  __main__.py  checker.py  core.py  discovery.py  installer.py  logger.py  package_classifier.py  parser.py  uninstaller.py
src/: __init__.py  checker.py  core.py  discovery.py  installer.py  logger.py  parser.py  uninstaller.py
tests/: __init__.py  test_midna.py  test_zap.py
wamya/: __main__.py
