[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zap"
version = "1.0.0"
description = "A smarter Python package installer"
readme = "README.md"
authors = [
    {name = "Jassem", email = "jasemmanita00@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.scripts]
zap = "zap:main"

[tool.setuptools]
py-modules = ["zap"]
